--- a/src/app/listtimesheets/listtimesheets.html
+++ b/src/app/listtimesheets/listtimesheets.html
@@ -15,6 +15,7 @@
 <table class="mat-table" width="100%">
     <thead>
         <tr class="mat-header-row">
+            <th class="mat-header-cell">ID</th>
             <th class="mat-header-cell">Project</th>
             <th class="mat-header-cell">Logged Date</th>
             <th class="mat-header-cell">Logged Hr</th>
@@ -27,7 +28,7 @@
         <tr class="mat-row">
            <td class="mat-cell">{{timesheet.id}}</td>
             <td class="mat-cell">{{timesheet.project}}</td>
-            <td class="mat-cell">{{timesheet.loginDate|date:'yyyy-MM-dd'}}</td>
+            <td class="mat-cell">{{timesheet.loginDate|date:'yyyy-MM-dd':'UTC'}}</td>
             <td class="mat-cell">{{timesheet.loggedHr}}</td>
             <td><button (click)="updateTimesheet(timesheet.id)"
             class="btn btn-success">Update</button></td>
