--- a/src/app/timesheet/timesheet.html
+++ b/src/app/timesheet/timesheet.html
@@ -3,12 +3,20 @@
     <form (ngSubmit)="saveTimesheet()">
         <fieldset class="form-group">
             <label>Project</label>
-            <input type="text"
+            <!--<input type="text"
             class="form-control"
             [(ngModel)]="timesheet.project" 
             name="project"
             required
             minlength="5"/>
+        </fieldset>
+        <fieldset>-->
+        <select [(ngModel)]="timesheet.project" name="projects"
+        class="form-control" required>
+            @for (option of options;track option){
+                <option [value]="option">{{option}}</option>
+            }
+        </select>
         </fieldset>
         <fieldset>
             <label>Login Date</label>
