--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -27,6 +27,7 @@
         <ul ngbDropdownMenu aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" routerLink="/signup">Signup</a></li>
           <li><a class="dropdown-item" routerLink="/timesheets">Timesheets</a></li>
+          <li><a class="dropdown-item" routerLink="/jobs">Jobs</a></li>
           <li><button class="dropdown-item" (click)="logout()">Logout</button></li>
         </ul>
       </li>}@else{
