--- a/src/app/timesheet/timesheet.html
+++ b/src/app/timesheet/timesheet.html
@@ -1,23 +1,23 @@
-<H1>Timesheet</H1>
+<H1 class="text-center">Timesheet</H1>
 <div class="container">
     <form (ngSubmit)="saveTimesheet()">
         <fieldset class="form-group">
             <label>Project</label>
-            <!--<input type="text"
+            <input type="text"
             class="form-control"
             [(ngModel)]="timesheet.project" 
             name="project"
             required
             minlength="5"/>
         </fieldset>
-        <fieldset>-->
+        <!--<fieldset>
         <select [(ngModel)]="timesheet.project" name="projects"
         class="form-control" required>
             @for (option of options;track option){
                 <option [value]="option">{{option}}</option>
             }
         </select>
-        </fieldset>
+        </fieldset>-->
         <fieldset>
             <label>Login Date</label>
             <input type="date"
