--- a/src/app/listjobs/listjobs.html
+++ b/src/app/listjobs/listjobs.html
@@ -19,6 +19,12 @@
                     class="btn btn-success">Execute</button>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Daily Users Report
+                </td>
+                <td><button (click)="executeDailyUserReportJob()" class="btn btn-success">Execute</button></td>
+            </tr>
         </tbody>
     </table>
 </div>
